--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,28 @@
   height: 100vh;
   //background-color: #111;
   //: white;
-  
+  h3.display-3 {
+    &:before, &:after {
+      content: "";
+      width: 50px;
+      height: 2px;
+      background: red;
+      display: inline-block;
+      }
+      &:before{
+         margin: 0 15px 10px 0;
+      }
+      &:after{
+        margin: 0 0 10px 15px;
+     }
+  }
+  .note {
+    border-left: 5px solid #616161;
+}
   .header {
     width: 100%;
+    top: 0;
+    z-index: 100;
     max-width: 100%;
       .content-img {
         width: 200px;
@@ -14,8 +33,11 @@
 
     .navbar-nav {
       white-space: nowrap;
-      .nav-link.active {
-        border-bottom: 1px solid;
+      .nav-link {
+        color: var(--bs-navbar-brand-color);
+        &.active {
+          border-bottom: 1px solid;
+        }
       }
     }
   }
@@ -96,11 +118,24 @@
     margin: 2rem;
   
     &.services {
+      .card-item {
+        background-color: var(--surface-color);
+        padding: 50px 30px;
+        position: relative;
+        overflow: hidden;
+        box-shadow: 0 0 29px 0 rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease-in-out;
+        border-radius: 8px;
+        z-index: 1;
+        height: 100%;
+        width: 100%;
+        border: none;
       .card-img-top {
         width: 100%;
         height: 10rem;
         object-fit: cover;
         }
+      }
     }
 
     &.contact {
@@ -130,4 +165,6 @@
       background-color: #adb5bd
     }
   }
+  
+
 }
